# modbox

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  compile_commands.json  reasonix.toml  vcpkg.json
.mimocode/: .cron-lock
.scratch/find-tui/issues/: 01-extract-find-collect-matches.md  02-build-find-tui-component.md  03-wire-tui-flag-entry-point.md  04-tests-find-tui.md
docs/: cat.md  find.md  usage.md
docs/superpowers/plans/: 2026-05-21-cp-options.md  2026-06-19-fd-command.md  2026-07-20-ls-tui.md
docs/superpowers/specs/: 2026-05-30-cat-differentiated-features-design.md  2026-06-19-fd-command-design.md  2026-07-20-ls-tui-design.md  2026-07-23-find-tui-design.md
include/commands/: arch.hpp  awk.hpp  b2sum.hpp  base32.hpp  base64.hpp  basename.hpp  basenc.hpp  cat.h  cat.hpp  chcon.hpp  chgrp.hpp  chmod.hpp  chown.hpp  chroot.hpp  cksum.hpp  comm.hpp  command_macros.hpp  command_registry.hpp  cp.h  cp.hpp  csplit.hpp  cut.hpp  date.hpp  dd.hpp  df.hpp  diff.hpp  dir.hpp  dircolors.hpp  dirname.hpp  du.h  du.hpp  dust.h  dust.hpp  echo.hpp  env.hpp  expand.hpp  expr.hpp  factor.hpp  false.hpp  fd.h  (+108 more)
include/commands/cat/: blame.h  blame.hpp  diff.h  diff.hpp  helpers.h  helpers.hpp  highlight.h  highlight.hpp
project/: Log.md
src/: main.c  main.cpp
src/commands/: arch.cpp  awk.cpp  b2sum.cpp  base32.cpp  base64.cpp  basename.cpp  basenc.cpp  cat.c  cat.cpp  cat_tui.cpp  chcon.cpp  chgrp.cpp  chmod.cpp  chown.cpp  chroot.cpp  cksum.cpp  comm.cpp  command_registry.cpp  cp.c  cp.cpp  csplit.cpp  cut.cpp  date.cpp  dd.cpp  df.cpp  diff.cpp  dir.cpp  dircolors.cpp  dirname.cpp  du.c  du.cpp  dust.c  dust.cpp  echo.cpp  env.cpp  expand.cpp  expr.cpp  factor.cpp  false.cpp  fd.c  (+109 more)
src/commands/cat/: blame.c  blame.cpp  diff.c  diff.cpp  helpers.c  helpers.cpp  highlight.c  highlight.cpp
tests/: framework.sh  run_tests.sh  test_arch.sh  test_awk.sh  test_b2sum.sh  test_base32.sh  test_base64.sh  test_basename.sh  test_basenc.sh  test_cat.sh  test_chcon.sh  test_chgrp.sh  test_chmod.sh  test_chown.sh  test_chroot.sh  test_cksum.sh  test_comm.sh  test_cp.sh  test_csplit.sh  test_cut.sh  test_date.sh  test_dd.sh  test_df.sh  test_diff.sh  test_dir_vdir.sh  test_dircolors.sh  test_dirname.sh  test_du.sh  test_dust.sh  test_echo.sh  test_env.sh  test_expand_unexpand.sh  test_expr.sh  test_factor.sh  test_false.sh  test_fd.sh  test_find.sh  test_fmt.sh  test_fold.sh  test_grep.sh  (+62 more)
